# vc-notifier

./: .dockerignore  Cargo.toml  Dockerfile
src/: config.rs  main.rs
src/commands/: setting.rs
